# stellar_wallet_mock

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
docs/: package-lock.json  package.json
docs/app/: globals.css  layout.tsx  page.tsx
docs/app/api/: page.tsx
docs/app/examples/: page.tsx
docs/app/how-it-works/: page.tsx
docs/app/installation/: page.tsx
docs/app/quickstart/: page.tsx
docs/components/: CodeBlock.tsx  Sidebar.tsx
examples/test-dapp/: Cargo.toml  environments.toml  package-lock.json  tsconfig.app.tsbuildinfo
examples/test-dapp/contracts/counter/: Cargo.toml
examples/test-dapp/contracts/counter/src/: lib.rs
examples/test-dapp/contracts/vault/: Cargo.toml
examples/test-dapp/contracts/vault/src/: lib.rs
examples/test-dapp/scripts/: deploy.sh
examples/test-dapp/src/components/: Counter.tsx  Vault.tsx
examples/test-dapp/src/pages/: Home.tsx
src/: createWallet.ts  index.ts  installMockWallet.ts
tests/: global-setup.ts  mock-wallet.spec.ts  test-dapp.spec.ts
tests/fixtures/: index.html
